--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">StandUp</string>
+    <string name="app_name">Morning</string>
 
     <string name="hello_team">Hello calling team!</string>
 </resources>
